# lyrics-bot-playlister

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  config.toml  docker-compose.dev.yml  pyproject.toml
.circleci/: config.yml
lyrics_bot_playlister/: config.py  project_types.py
lyrics_bot_playlister/api/: __init__.py  deps.py  twitter.py
lyrics_bot_playlister/cli/: cli.py
lyrics_bot_playlister/lyrics/: scrape.py  search.py
lyrics_bot_playlister/twitter/: api.py  query.py  tweet.py
scripts/: deploy_lambda.py
terraform/: .terraform.lock.hcl  api-gateway.tf  circle-ci.tf  iam-ci.tf  iam-lambda.tf  lambda-cloudwatch.tf  lambda.tf  locals.tf  outputs.tf  providers.tf  s3.tf  sentry.tf  sqs.tf  ssm.tf  terraform.tf  variables.tf
terraform/lambda/: iam.tf  lambda.tf  locals.tf  outputs.tf  s3.tf  variables.tf
terraform/lambda/.artefact/: main.py
tests/: test_config.py
tests/api/: conftest.py  test_app.py  test_deps.py  test_twitter.py
tests/lyrics/: conftest.py  song-list.txt  song.txt  test_scrape.py  test_search.py
