[tool.poetry]
name = "lyrics-bot-playlister"
version = "0.1.0"
description = ""
authors = ["Dom Weldon <dom.weldon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.6.2"
requests = "^2.25.1"
fastapi = "^0.63.0"
typer = "^0.3.2"
toml = "^0.10.2"
tweepy = "^3.10.0"

[tool.poetry.dev-dependencies]
bpython = "^0.20.1"
flake8 = "^3.8.4"
black = "^20.8b1"
isort = "^5.6.4"
mypy = "^0.790"
pre-commit = "^2.9.3"
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

profile = "hug"
src_paths = ["lyrics_bot_playlister", "tests"]
multi_line_output = 3
line_length = 79
ensure_newline_before_comments = true
include_trailing_comma = true
use_parentheses = true
